🔧 chore: add px-auto to _spacing

--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -58,3 +58,8 @@ $spacing-named: (
     margin-left: auto;
     margin-right: auto;
 }
+
+.px-auto {
+    padding-left: auto;
+    padding-right: auto;
+}
