♻️ refactor: replace deprecated @import with @use + add specifiers for file organization

--- a/src/framework.scss
+++ b/src/framework.scss
@@ -1,8 +1,14 @@
+@use './spacing';
+
 /**
-    Hello World
+***     Global Configuration
 **/
 
-@import 'spacing';
+
+
+/**
+***     Reset CSS
+**/
 
 * {
     box-sizing: border-box;
