🐛 fix(height): generating w- instead of h-

--- a/src/_height.scss
+++ b/src/_height.scss
@@ -16,7 +16,7 @@ $height-sizes: (
 
 @mixin height-utilities($map) {
     @each $key, $value in $map {
-        .w-#{$key} {
+        .h-#{$key} {
             height: $value;
         }
     }
