♻️ refactor(height): add min-h and max-h properties

--- a/src/_height.scss
+++ b/src/_height.scss
@@ -19,6 +19,14 @@ $height-sizes: (
         .h-#{$key} {
             height: $value;
         }
+
+        .min-h-#{$key} {
+            min-height: $value;
+        }
+
+        .max-h-#{$key} {
+            max-height: $value;
+        }
     }
 }
 
