--- a/src/_borders.scss
+++ b/src/_borders.scss
@@ -12,7 +12,11 @@ $border-widths: (
     4,
     5,
     6,
-    8
+    8,
+    10,
+    12,
+    14,
+    16
 );
 
 @each $width in $border-widths {
@@ -73,10 +77,17 @@ $border-styles: (
 }
 
 $border-radius-sizes: (
-    sm: 0.125rem,
-    md: 0.25rem,
+    2xs: 0.125rem,
+    sm: 0.25rem,
+    md: 0.375rem,
     lg: 0.5rem,
-    xl: 1rem
+    xl: 0.875rem,
+    2xl: 1rem,
+    3xl: 1.125rem,
+    4xl: 1.25rem,
+    5xl: 1.50rem,
+    6xl: 1.75rem,
+    7xl: 2rem,
 );
 
 @each $size, $value in $border-radius-sizes {
@@ -105,6 +116,14 @@ $border-radius-sizes: (
         border-top-right-radius: $value;
         border-bottom-right-radius: $value;
     }
+}
+
+.rounded-full {
+    border-radius: calc(infinity * 1px);
+}
+
+.rounded-none {
+    border-radius: 0
 }
 
 // TODO: colouring module
