♻️ refactor(container): improve size-naming in container + add xs and 2xlg, 3xlg

--- a/src/_container.scss
+++ b/src/_container.scss
@@ -3,11 +3,13 @@
 **/
 
 $container-sizes: (
+    'xs': 480px,
     'sm': 640px,
     'md': 768px,
     'lg': 1024px,
     'xlg': 1280px,
-    'xxlg': 1536px
+    '2xlg': 1536px,
+    '3xlg': 1600px
 );
 
 @each $name, $width in $container-sizes {
